# affirMe

./: README.md
backend/: .env  Cargo.toml  affirmations.csv
backend/src/: insert_data.rs  main.rs  server.rs
backend/src/api/: affirmations.rs  get_affirmations.rs  get_all_affirmations.rs  get_random.rs  get_random_affirmation.rs  get_tags.rs  mod.rs  random_affirmation.rs
backend/src/api/services/: get_all_affirmations.rs  get_all_tags.rs  get_filtered_affirmations.rs  get_filtered_and_paginated_affirmations.rs  get_paginated_affirmations.rs  get_random_affirmation.rs  mod.rs
backend/src/models/: affirmation.rs  mod.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/components/atoms/: Button.svelte  Card.svelte  Logo.svelte  MultiSelectDropdown.svelte  Searchbar.svelte  SkeletonCard.svelte  Snackbar.svelte  Tag.svelte
frontend/src/lib/components/molecules/: CardGrid.svelte  Header.svelte  ShowMore.svelte
frontend/src/lib/components/organisms/: FilteredCardGrid.svelte
frontend/src/lib/services/: affirmationService.ts
